fixing font and spacing for 'code' in the main header

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,12 @@
 @charset "utf-8";
 /* CSS Document */
 
+@font-face {
+  font-family: 'Droid Sans Mono';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Droid Sans Mono'), local('DroidSansMono'), url('http://themes.googleusercontent.com/static/fonts/droidsansmono/v2/ns-m2xQYezAtqh7ai59hJUYuTAAIFFn5GTWtryCmBQ4.woff') format('woff');
+}
 
 *{
 	margin:0;
@@ -93,12 +99,12 @@ color:#195383;
 }
 
 .info pre{
-	font-family: monospace;
-/*	font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;*/
+	font-family: "Droid Sans Mono", "Vera Sans Mono", monospace;
 	font-weight: bold;
 	text-shadow:0px 2px 2px #003a66;
 	color: #8EABCF;
-	margin: 20px 0px -20px 0px;
+	margin-bottom: -20px;
+	padding-top: 20px;
 }
 
 .info pre .op {
